Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjTextObj.quorum
class main
    action Main
        Text t
        Number num
        t:SetValue("text")
        num = cast(Number, t)
    end
end